
[package]
name = "anomalous_inquiry"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
pulldown-cmark = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
rss = "2.0"
printpdf = "0.7"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
